# generic_search

./: Cargo.toml  build.rs
generic_search/src/: common.rs  defs.rs  lib.rs  local_consumer.rs  remote_consumer.rs  remote_orchestrator.rs
proto/: search.proto
src/: defs.rs  handler.rs  local_consumer.rs  main.rs  old.rs  orchestrator.rs  producer.rs
zombie_hunt/config/: client_config.yaml
zombie_hunt/src/: helpers.rs  main.rs  zombie_hunt_client.rs
zombie_hunt_server/config/: server_config.yaml
zombie_hunt_server/src/: helpers.rs  main.rs
