[package]
name = "generic_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
edition = "2018"
name = "zombie_chase"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
threadpool = "1.8.1"
colored="2"
