[package]
name = "generic_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
edition = "2018"
name = "zombie_chase"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
colored="2"
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
